src/_toolbar-frame.less
@import "_variables.less";

#toolbar-frame#toolbar-frame {
  overflow: visible;

  .dijitToolbar {
    margin: 0;
    padding: 0;
    border: none;
    border-radius: 0;
  }
  #toolbar {
    padding: 6px calc(@content-spacing-left);
    background-color: @default-bg;

    :is(#toolbar-main, .material-icons) {
      flex-shrink: 0;
    }
    :is(#toolbar-headlines, #toolbar-headlines .left) {
      min-width: 0;
    }
    @media (max-width: @breakpoint-lg) {
      .dijitInputField {
        padding-left: 4px;
      }
      .dijitRight {
        display: none;
      }
    }
    .icon-syndicate {
      border: none;
      color: @default-text;
    }
    #toolbar-headlines .left,
    > .material-icons {
      position: relative;
      top: -1px;
      padding-left: 1px;
    }
    .feed_title {
      overflow: hidden;
      color: @default-text;
      font-size: 15px;
      font-weight: bold;
      text-overflow: ellipsis;

      > * {
        vertical-align: middle;
      }

      + .icon-error {
        margin-left: 8px;
      }
    }
    .cancel_search {
      padding-left: 10px;
      color: transparent;
      font-size: 12px;
      font-weight: normal;
      vertical-align: baseline;
    }
    #feed_current_unread {
      min-width: unset;
      padding: 0 6px;
      border-radius: 99px;
      border-color: transparent;
      background-color: @color-fade8;
      color: @default-bg;
      font-size: 12px;
    }
    #selected_prompt {
      margin-right: 25px;
      color: @fg-text-muted;
      font-style: normal;
    }

    // -------------------------------------------------------------------------
    // buttons excluding show/hide feeds
    // -------------------------------------------------------------------------
    :is(.dijitInline, .dijitReset) {
      border-color: transparent;
      background-color: transparent;
      box-shadow: none;
    }
    :is(.dijitButton, .dijitDropDownButton, .dijitSelect) {
      transition: color 0.2s;
      color: @fg-text-muted;
    }
    :is(.dijitActive, .dijitHover, .dijitOpened) {
      color: @default-text;
    }
    .dijitDropDownButton .material-icons {
      position: relative;
      top: -1px;
    }

    // -------------------------------------------------------------------------
    // show/hide feeds, exclude plugin "search button"
    // -------------------------------------------------------------------------
    > .dijitButton:not([style]) {
      margin: 0;

      .dijitButtonNode {
        position: fixed;
        top: 0;
        bottom: 0;
        left: 0;
        width: @feeds-toggle-width;
        padding: 0;
        transition: background-position 0.1s;
        border: 0;
        border-radius: 0;
        background: linear-gradient(to right, @color-fade2, @color-fade0) calc(-1 * @feeds-toggle-width) 0 no-repeat;
        box-shadow: none;
      }
      .dijitButtonContents {
        position: absolute;
        top: calc(37px + (@headline-height / 2));
        left: 50%;
        width: 16px;
        height: 16px;
        margin-left: -8px;
        padding: 0;
        overflow: hidden;
        transition: opacity 0.2s;
        opacity: @fade4;
        text-indent: 101%;

        &::before {
          content: "";
          position: absolute;
          top: 0;
          right: 0;
          left: 0;
          height: 3px;
          background-color: @default-fg;
          box-shadow: 0 6px 0 @default-fg, 0 12px 0 @default-fg;
        }
      }
      &:hover .dijitButtonNode {
        background-position: 0 0;
      }
      &:hover .dijitButtonContents {
        opacity: @fade8;
      }
    }
  }

  // ---------------------------------------------------------------------------
  // plugins
  // ---------------------------------------------------------------------------
  .userpic-gravatar {
    transform: scale(1.333);
  }
}

